Fixes spacing for css & js files.

--- a/css/sample-app.css
+++ b/css/sample-app.css
@@ -1,1 +1,3 @@
-h1{font-family: arial, sans-serif;}
+h1{
+  font-family: arial, sans-serif;
+}
